# vmix-utility

./: .gitignore  .gitmodules  .goreleaser.yml  .mcp.json  .travis.yml  CLAUDE.md  LICENSE  README.md  README_ja.md  RELEASE.md  Taskfile.yml  go.mod  go.sum  latest.json  main.go  makefile  mise.toml  package.json  temp_simple_fix.rs
.circleci/: config.yml
.claude/: settings.local.json
.cursor/commands/: solve_issue.md
.github/workflows/: build.yaml  go.yml  pre-release.yml  release.yml  test-build.yml
.serena/: project.yml
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  design_patterns_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
app/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
app/.claude/: settings.local.json
app/.serena/: project.yml
app/.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/multiviewer/: index.html
app/src-tauri/src/: commands.rs  http_client.rs  http_server.rs  lib.rs  logging.rs  main.rs  multiviewer.rs  network_scanner.rs  state.rs  tcp_manager.rs  types.rs
app/src/assets/: shortcuts.json
app/src/components/: CompactVideoListView.tsx  ConnectionSelector.tsx  Layout.tsx  VideoListView.tsx
app/src/hooks/: useConnectionSelection.ts  useNavigation.tsx  useTheme.ts  useUISettings.tsx  useVMixStatus.ts
app/src/pages/: BlankGenerator.tsx  Connections.tsx  Developer.tsx  InputManager.tsx  ListManager.tsx  Logs.tsx  Multiviewer.tsx  Settings.tsx  ShortcutGenerator.tsx  SingleVideoList.tsx
app/src/services/: diagnosticsService.ts  multiviewerService.ts  networkScannerService.ts  settingsService.ts  vmixService.ts
scraper/: go.mod  go.sum  parameter_type.go  parametertype_string.go  scraper.go
scraper/cmd/: main.go
server/: go.mod  go.sum  main.go  vmix_utility.go
server/scraper/: parameter_type.go  parametertype_string.go  scraper.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  vmix.rs
src/pages/: index.tsx
vmix-utility/: CLAUDE.md  package-lock.json  package.json  test_http.rs
vmix-utility/.claude/: settings.local.json
vmix-utility/src/: App.tsx
vmix-utility/src-tauri/: Cargo.toml  tauri.conf.json
vmix-utility/src-tauri/src/: lib.rs
web/: .gitignore  package-lock.json  package.json  vue.config.js
web/public/: index.html
web/src/: App.vue  main.ts  type.d.ts
(+23 files in other folders)
