[package]
name = "app"
version = "2.2.0"
description = "app"
authors = ["Shugo Kawamura"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vmix_utility_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-prevent-default = "3"
tauri-plugin-single-instance = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "sync"] }
futures = "0.3"
quick-xml = { version = "0.38", features = ["serialize"] }
url = "2"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
urlencoding = "2.1"
vmix_rs = { git = "https://github.com/FlowingSPDG/vmix-rs.git" }
network-interface = { version = "2.0.3", features = ["serde"] }

[profile.dev]
# デバッグ情報を削減
debug = 1
# インクリメンタルコンパイルを有効化
incremental = true
# 並列度を上げる
codegen-units = 16

[profile.release]
# リリースビルドの最適化
lto = "thin"
codegen-units = 1
